[gd_scene load_steps=5 format=2]

[ext_resource path="res://Resources/Theme.tres" type="Theme" id=1]
[ext_resource path="res://Resources/background1.png" type="Texture" id=2]
[ext_resource path="res://Scripts/LevelSelect.gd" type="Script" id=3]
[ext_resource path="res://Scripts/LevelButton.gd" type="Script" id=4]

[node name="LevelSelect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -419, -122 )
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_vertical_guides_": [  ]
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.826667
anchor_right = 0.5
anchor_bottom = 0.933667
margin_left = -128.0
margin_top = -3.05176e-05
margin_right = 128.0
margin_bottom = 0.799988
text = "Menu"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Clear" type="Button" parent="."]
anchor_left = 0.8125
anchor_top = 0.826667
anchor_right = 0.8125
anchor_bottom = 0.933667
margin_left = -128.0
margin_top = -3.05176e-05
margin_right = 128.0
margin_bottom = 0.799988
text = "Clear Scores"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.107
anchor_right = 0.5
anchor_bottom = 0.787
margin_left = -384.0
margin_top = -8.2
margin_right = 384.0
margin_bottom = -6.20004
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Labels" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 74.0
margin_right = 768.0
margin_bottom = 109.0
alignment = 1

[node name="Level" type="Label" parent="VBoxContainer/Labels"]
margin_right = 302.0
margin_bottom = 35.0
size_flags_horizontal = 3
text = "Level"
align = 1

[node name="Time" type="Label" parent="VBoxContainer/Labels"]
margin_left = 306.0
margin_right = 457.0
margin_bottom = 35.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "Time"
align = 1

[node name="Score" type="Label" parent="VBoxContainer/Labels"]
margin_left = 461.0
margin_right = 612.0
margin_bottom = 35.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "Score"
align = 1

[node name="Rank" type="Label" parent="VBoxContainer/Labels"]
margin_left = 616.0
margin_right = 768.0
margin_bottom = 35.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "Rank"
align = 1

[node name="Level1" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 119.0
margin_right = 768.0
margin_bottom = 184.0
alignment = 1

[node name="Button" type="Button" parent="VBoxContainer/Level1"]
margin_right = 302.0
margin_bottom = 65.0
size_flags_horizontal = 3
text = "1 - Basic"
script = ExtResource( 4 )

[node name="Time" type="Label" parent="VBoxContainer/Level1"]
margin_left = 306.0
margin_top = 15.0
margin_right = 457.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "-/11.0"
align = 1

[node name="Score" type="Label" parent="VBoxContainer/Level1"]
margin_left = 461.0
margin_top = 15.0
margin_right = 612.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "-/10"
align = 1

[node name="Rank" type="Label" parent="VBoxContainer/Level1"]
margin_left = 616.0
margin_top = 15.0
margin_right = 768.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "-"
align = 1

[node name="Level2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 194.0
margin_right = 768.0
margin_bottom = 259.0
alignment = 1

[node name="Button" type="Button" parent="VBoxContainer/Level2"]
margin_right = 302.0
margin_bottom = 65.0
size_flags_horizontal = 3
text = "2 - Rotation"
script = ExtResource( 4 )
LEVEL = 2

[node name="Time" type="Label" parent="VBoxContainer/Level2"]
margin_left = 306.0
margin_top = 15.0
margin_right = 457.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "-/11.0"
align = 1

[node name="Score" type="Label" parent="VBoxContainer/Level2"]
margin_left = 461.0
margin_top = 15.0
margin_right = 612.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "-/10"
align = 1

[node name="Rank" type="Label" parent="VBoxContainer/Level2"]
margin_left = 616.0
margin_top = 15.0
margin_right = 768.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "-"
align = 1

[node name="Level3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 269.0
margin_right = 768.0
margin_bottom = 334.0
alignment = 1

[node name="Button" type="Button" parent="VBoxContainer/Level3"]
margin_right = 302.0
margin_bottom = 65.0
size_flags_horizontal = 3
text = "3 - Slide"
script = ExtResource( 4 )
LEVEL = 3

[node name="Time" type="Label" parent="VBoxContainer/Level3"]
margin_left = 306.0
margin_top = 15.0
margin_right = 457.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "-/11.0"
align = 1

[node name="Score" type="Label" parent="VBoxContainer/Level3"]
margin_left = 461.0
margin_top = 15.0
margin_right = 612.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "-/10"
align = 1

[node name="Rank" type="Label" parent="VBoxContainer/Level3"]
margin_left = 616.0
margin_top = 15.0
margin_right = 768.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "-"
align = 1

[node name="Level4" type="HBoxContainer" parent="VBoxContainer"]
visible = false
margin_top = 270.0
margin_right = 768.0
margin_bottom = 335.0
alignment = 1

[node name="Button" type="Button" parent="VBoxContainer/Level4"]
margin_right = 302.0
margin_bottom = 65.0
size_flags_horizontal = 3
text = "4 - Puzzle"
script = ExtResource( 4 )
LEVEL = 4

[node name="Time" type="Label" parent="VBoxContainer/Level4"]
margin_left = 306.0
margin_top = 15.0
margin_right = 457.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "-/11.0"
align = 1

[node name="Score" type="Label" parent="VBoxContainer/Level4"]
margin_left = 461.0
margin_top = 15.0
margin_right = 612.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "-/10"
align = 1

[node name="Rank" type="Label" parent="VBoxContainer/Level4"]
margin_left = 616.0
margin_top = 15.0
margin_right = 768.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "-"
align = 1

[node name="Level5" type="HBoxContainer" parent="VBoxContainer"]
visible = false
margin_top = 307.0
margin_right = 768.0
margin_bottom = 372.0
alignment = 1

[node name="Button" type="Button" parent="VBoxContainer/Level5"]
margin_right = 302.0
margin_bottom = 65.0
size_flags_horizontal = 3
text = "5 - Finale"
script = ExtResource( 4 )
LEVEL = 5

[node name="Time" type="Label" parent="VBoxContainer/Level5"]
margin_left = 306.0
margin_top = 15.0
margin_right = 457.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "-/11.0"
align = 1

[node name="Score" type="Label" parent="VBoxContainer/Level5"]
margin_left = 461.0
margin_top = 15.0
margin_right = 612.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "-/10"
align = 1

[node name="Rank" type="Label" parent="VBoxContainer/Level5"]
margin_left = 616.0
margin_top = 15.0
margin_right = 768.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "-"
align = 1

[connection signal="pressed" from="Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="Clear" to="." method="_on_Clear_pressed"]
